# kangaroo-tauri

./: .gitignore  README.md  compile-binaries.md  package-lock.json  package.json  updater.json
.github/workflows/: release-codesigned.yaml  release.yaml
pouch/: README.md  forum.happ  hc-stress-test.happ  kando.happ
setup/: install_binaries.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: profiles.html  profiles.js
src-tauri/icons/: icon.icns
src-tauri/src/: conductor.rs  config.rs  consts.rs  errors.rs  filesystem.rs  lair.rs  launch.rs  logs.rs  main.rs  menu.rs  system_tray.rs  utils.rs
src-tauri/src/app/: menu.rs  mod.rs  system_tray.rs  window.rs
src-tauri/src/app_state/: filesystem.rs  mod.rs
src-tauri/src/commands/: log.rs  mod.rs  profile.rs  restart.rs  sign_zome_call.rs
src-tauri/src/initialization_scripts/: signZomeCall.js  zoomOnScroll.js
src-tauri/src/process/: conductor.rs  lair.rs  mod.rs
