[package]
name = "forum" # replace-me
version = "0.1.0" # replace-me -- Choose wisely, see "Note on Versioning" in README
description = "A Forum hApp"
authors = []
license = ""
repository = ""
edition = "2021"

[profile.release]
opt-level = "z"
lto = true

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri-build = { version = "1.5", features = [] }
toml = "0.8.19"

[dependencies]

###### bump holochain dependencies here
holochain_client = "0.5.1"
holochain = { version = "0.3.2", features = ["sqlite-encrypted"] }
holochain_keystore = "0.3.2"
holochain_types = "0.3.2"
holochain_zome_types = "0.3.2"
mr_bundle = "0.3.2"
######

futures = "0.3"
log = "0.4.14"
log4rs = "1.0.0"
nanoid = "0.4.0"
opener = "0.5.0"
portpicker = "0.1.1"
semver = "1.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sodoken = "0.0.9"
symlink = "0.1.0"
tauri = { version = "1.5", features = ["devtools", "cli", "clipboard-write-text", "dialog", "process-command-api", "system-tray", "shell-open"] }
thiserror = "1"
url = "2.3.1"
url2 = "0.0.6"
# optional (single-instance):
tauri-plugin-single-instance = { git = "https://github.com/matthme/plugins-workspace", branch = "single-instance-semver" }
chrono = "0.4.38"

[features]
# DO NOT REMOVE: this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
